-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.910 2011-03-28 20:32:01 guru Exp $
-----------------------------------------------------------------------------------------

2011-03-28	pwessel
	* *.[ch]:		Replace STAT with GMT_STAT to avoid name clashes on some systems.
	* misc/gmt2kml_func.c	Ensure pen is given in points and >= 1 in width.
	* misc/gmt2kml.txt:	Explain how pen needs to be set.
	* pscontour_func.c:	Got wrong contour level when some segments along edges were skipped.
				Now use same z-slop (small) as in grdcontour_func.c
	* gmt_support.c:	Not not handle cases like zmin color zmax - [i.e., repeat the color],
				causing strange color ramps.
	* gmt_io.c:		The polygon status from OGR headers (@H, @P) did not get copied into
				the polygon structure headers.

2011-03-28	remko
	* ps2raster_func.c:	Automatically add GS option -dMaxBitmap=100000000 with -TG

2011-03-27	remko
	* doc/html/index.html:	Now created (linked) out of gmt_services.html
	* doc/GNUmakefile:	Removed everything dealing with HMTL documentation

2011-03-27	jluis
	* gmt_esri_io.c:	Extend the ESRI format to also read ESRI .HDR format. 
				That is a raw binary + a .hdr ascii header file.
				It knows also how to deal with plain GTOPO30 and SRTM30
				raw binary files (that, is without companion .hdr file)
				as well as SRTM1 and SRTM3 (with a .hgt extension)
	* gmt_io.c:		Add extra test ' && c != EOF' to GMT_fgets to avoid potential 
				infinite while loop when called on a binary file.

2011-03-26	pwessel
	* pslib.c:		Added 2nd argument to PSL_endclipping to indicate how
				many levels to restore and what kind of clipping (txt/poly).
	* PSL_label.ps:		Two new counters (PSL_nclip_pol and PSL_nclip_txt) added.
	* psclip_func.c:	Extended -C option to handle the various kinds of clipping
				restore that may be required.
	* grdcontour_func.c:	For -D must turn on -mo explicitly (like pscontour/pscoast)

2011-03-25	pwessel